# ADIP_HW-4

./: CMakeLists.txt  README.md
apps/: HW4.cpp
data/: VideoReader.cpp
include/: VideoReader.hpp  img_process.hpp
src/: VideoReader.cpp  img_process.cpp
